--- a/index.html
+++ b/index.html
@@ -3,35 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOS MEJORES 5 DEPARTAMENTOS DE COLOMBIA</title>
+    <title>DE LOS MEJORES 5 DEPARTAMENTOS DE COLOMBIA</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body background="images/image.jpg">
     <div class="Titulo">
-        <h1>CONOCE LOS 5 DEPARTAMENTOS MAS IMPORTANTES DE COLOMBIA</h1>
+        <h1>CONOCE 5 DE LOS DEPARTAMENTOS MAS IMPORTANTES DE COLOMBIA</h1>
+    </div>
+    <div class="Titulo">
+        <b>¿Que departamento te gustaria visitar?</b>
     </div>
     <div class="colombia">
-    <img src="images/MapaCOlombia2.jpg"width="700" height="700">
+    <img src="images/ColombiaMapa.jpg"width="764" height="791" usemap="#Mapa">
+    <map name="Mapa">
+        <area shape="poly" coords="253, 300, 244, 287, 233, 269, 240, 254 268, 254, 274, 271, 264, 284" href="Antioquia.html" target="_blank" alt="EnlaceAntioquia">
+        <area shape="poly" coords="316, 221, 305, 212, 294, 193, 301, 178, 325, 178, 336, 193, 325, 212" href="Bolivar.html" target="_blank" alt="EnlaceBolivar">
+        <area shape="poly" coords="381, 348, 371, 355, 360, 317, 368, 304, 392, 304, 401, 319, 390, 333" href="Boyaca.html" target="_blank" alt="EnlaceBoyaca">
+        <area shape="poly" coords="253, 359, 242, 345, 233, 324, 242, 315, 264, 313, 274, 328, 262, 345" href="Caldas.html" target="_blank" alt="EnlaceCaldas">
+        <area shape="poly" coords="362, 298, 353, 284, 340, 265, 351, 252, 375, 252, 382, 265, 371, 285" href="Santander.html" target="_blank" alt="EnlaceSantander">
+    </map>
     </div>
-
-    <div class="Titulo">
-    <b>¿Que departamento te gustaria visitar?</b>
-    </div>
+   
 
     <div class="Departamento1">
-    <b>SANTANDER</b><br>
+        <b>ANTIOQUIA</b><br>
     </div>
     <div class="Departamento2">
-    <b>CALDAS</b><br>
+        <b>BOLIVAR</b><br>
     </div>
     <div class="Departamento3">
-    <b>BOLIVAR</b><br>
+        <b>BOYACA</b><br>
     </div>
     <div class="Departamento4">
-    <b>BOYACA</b><br>
+        <b>CALDAS</b><br>
     </div>
     <div class="Departamento5">
-    <b>ANTIOQUIA</b><br>
+        <b>SANTANDER</b><br>
     </div>
 </body>
 </html>
