--- a/Bolivar.html
+++ b/Bolivar.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BOLIVAR</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body background="/images/pixelcut-export.jpeg">
+    <div class="TituloBolivar">
     <h1> BOLIVAR </h1>
+    </div>
+    <div class="InfoBolivar">
+    <b>En este departamento encontramos a una de las ciudades mas visitadas en toda colombia, CARTAGENA es un destino turistico visistado por aproximadamente 228.000 viajeros cada año </b>
+    </div>
 </body>
 </html>
