--- a/Antioquia.html
+++ b/Antioquia.html
@@ -4,8 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ANTIOQUIA</title>
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body background="/images/Antioquia.jpg">
+    <div class="Todo2">
+    <div class="TituloAntioquia">
     <h1> ANTIOQUIA </h1>
+    </div>
+    <div class="InfoAntioquia">
+    <b>Uno de los departamentos mas reconocidos principalmente por la popularidad de Medellin y toda su historia, siendo este mismo una de las ciudades mas grandes de Colombia</b>
+    </div>
+    <div class="ImagenAntioquia">
+        <img src="images/MapaAntioquia2.jpg" width="350px" alt="">
+    </dic>
+    </div>
+    <div class="EconomiaAntioquia">
+        <h2>ECONOMIA</h2>
+    </div>
+    <div class="Caracteristica2">  
+        <b>
+        <ul>
+            <li>Turismo: Antioquia es una ciudad ampliamente visitada principalmente por sus emblemas como lo son; la famosa piedra del Peñol con sus 740 escaoles o la hacienda napoles, la hacienda de el mayor narcotraficante de la historia 
+
+            </li>
+            <li>Agricultura: Uno de los pilares fundamentales de la zona es el cafe ya que Antioquia es una de las principales regiones productoras del mismo, el cual es reconocido por su calidad
+
+            </li>
+            <li>Industria: Uno de los departamentos mas industrializados es Antioquia, cuenta con con una fuerte base industrial que incluye textiles, alimentos, bebidas, productos químicos y metalurgia</li>
+        </ul>
+        </b>
+    </div>
+    <img src="images/Untitled Project (15).jpg" width="700" alt="">
+
+    <div class="VOLVER">
+    <a href="index.html"><h2>VOLVER</h2></a>
+    </div>
+    
+</body>
+</html>
 </body>
 </html>
