--- a/Bolivar.html
+++ b/Bolivar.html
@@ -7,11 +7,38 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body background="/images/pixelcut-export.jpeg">
+    <div class="Todo2">
     <div class="TituloBolivar">
     <h1> BOLIVAR </h1>
     </div>
     <div class="InfoBolivar">
-    <b>En este departamento encontramos a una de las ciudades mas visitadas en toda colombia, CARTAGENA es un destino turistico visistado por aproximadamente 228.000 viajeros cada año </b>
+    <b>La capital de este departamento es una de las ciudades mas visitadas de toda colombia, CARTAGENA es un destino turistico visistado por sus arquitecturas patrimoniales y sus festivales que incluyen temas como la literatura, el arte y la gastronomía</b>
     </div>
+    <div class="ImagenBolivar">
+        <img src="images/Untitled Project (3).jpg" width="350px" alt="">
+    </dic>
+    </div>
+    <div class="EconomiaBolivar">
+        <h2>ECONOMIA</h2>
+    </div>
+    <div class="Caracteristica1">  
+        <b>
+        <ul>
+            <li>Turismo: Uno de los principales fuertes en la economia del departamento de Bolivar se basa en el turismo primsipalmente gracias a los aproximados 228.000 turistas anuales que visitan Cartagena
+
+            </li>
+            <li>La Pesca: Debido a que el departamento de Bolivar tiene acceso directo con el mar Caribe, la pesca se vuelve una actividad muy rentable
+
+            </li>
+            <li>Comercio Internacional: Al tener un puerto gran cantidad de importaciones y exportaciones pueden transitar lo cual fomenta el comercio y puede ser una opcion atractiva para los invercionistas </li>
+        </ul>
+        </b>
+    </div>
+    <img src="images/Untitled Project (10).jpg" width="700" alt="">
+
+    <div class="VOLVER">
+    <a href="index.html"><h2>VOLVER</h2></a>
+    </div>
+    
 </body>
 </html>
