--- a/Boyaca.html
+++ b/Boyaca.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boyaca</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body background="/images/Antioquia.jpg">
+    <div class="Todo2">
+    <div class="TituloBoyaca">
+    <h1> BOYACA </h1>
+    </div>
+    <div class="InfoBoyaca">
+    <b>Un departamento que es testigo de la historia de Colombia, el 7 de agosto se libro una de las batallas mas importantes de Colombia precisamente en BOYACA</b>
+    </div>
+    <div class="ImagenBoyaca">
+        <img src="images/Untitled Project (16).jpg" width="350px" alt="">
+    </dic>
+    </div>
+    <div class="EconomiaBoyaca">
+        <h2>ECONOMIA</h2>
+    </div>
+    <div class="Caracteristica3">  
+        <b>
+        <ul>
+            <li>Agricultura: En Boyaca cultivos como la papa, cereales como el maiz, trigo y cebada. Se dan muy bien en esta tierra debido al clima  
+
+            </li>
+            <li>Ganadería: La cria de ganado es otra actividad importante. Boyaca se destaca en la produccion de carne y leche, esto se debe a que los terrenos de la region son mayormente planos
+
+            </li>
+            <li>Artesanias: Boyaca es conocido por su producción de artesanias, que incluyen ceramica, tejidos y productos de cuero. Estas actividades generan ingresos y empleo</li>
+        </ul>
+        </b>
+    </div>
+    <img src="images/Untitled Project (17).jpg" width="700" alt="">
+
+    <div class="VOLVER">
+    <a href="index.html"><h2>VOLVER</h2></a>
+    </div>
     <h1>BOYACA</h1>
 </body>
 </html>
