--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body background="images/image.jpg">
+    
+    <div class="Todo2">
     <div class="Titulo">
         <h1>CONOCE 5 DE LOS DEPARTAMENTOS MAS IMPORTANTES DE COLOMBIA</h1>
     </div>
