--- a/Boyaca.html
+++ b/Boyaca.html
@@ -6,7 +6,7 @@
     <title>Boyaca</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body background="/images/Antioquia.jpg">
+<body background="/images/Boyaca.jpg">
     <div class="Todo2">
     <div class="TituloBoyaca">
     <h1> BOYACA </h1>
