--- a/Antioquia.html
+++ b/Antioquia.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body background="/images/Antioquia.jpg">
+<body background="/images/FondoAntioquia39.jpg">
     <div class="Todo2">
     <div class="TituloAntioquia">
     <h1> ANTIOQUIA </h1>
