--- a/Caldas.html
+++ b/Caldas.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caldas</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <h1> CALDAS </h1>
+<body background="/images/FondoCaldas.jpeg">
+    <div class="Todo2">
+    <div class="TituloCaldas">
+    <h1>CALDAS</h1>
+    </div>
+    <div class="InfoCaldas">
+    <b> El Eje cafetero ademas de ser conocido por su cafe tambien es reconocido por su belleza natural y su biodiversidad</b>
+    </div>
+    <div class="ImagenCaldas">
+        <img src="images/MapaCaldas.jpg" width="350px" alt="">
+    </dic>
+    </div>
+    <div class="EconomiaCaldas">
+        <h2>ECONOMIA</h2>
+    </div>
+    <div class="Caracteristica4">  
+        <b>
+        <ul>
+            <li>Agricultura: Su producto insignea es el cafe, a pesar de eso en esta tiera se puede cultivar otro tipo de alimentos tales como maiz, frijoles, platano y frutas
+
+            </li>
+            <li>Turismo: Los paisajes montañosos de Caldas junto con sus parques naturales lo hacen un destino turistico bastante interesante 
+
+            </li>
+            <li>Proyectos de Desarrollo: En los ultimos años, se han implementado iniciativas para promover el emprendimiento, la sostenibilidad y la innovacion en el sector agricola y en otras areas</li>
+        </ul>
+        </b>
+    </div>
+    <img src="images/Untitled Project (21).jpg" width="700" alt="">
+
+    <div class="VOLVER">
+    <a href="index.html"><h2>VOLVER</h2></a>
+    </div>
+
 </body>
 </html>
