--- a/Santander.html
+++ b/Santander.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Santander</title>
+    <title>SANTANDER</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body background="/images/FondoSanta.jpeg">
+    <div class="Todo2">
+    <div class="TituloSantander">
     <h1>SANTANDER</h1>
+    </div>
+    <div class="InfoSantander">
+    <b>Una tierra montañosa, habitantes con una personalidad arrasadora, comida tipica y es la cuarta economia mas importante de Colombia con un Producto Interno Bruto cercano a los 67,9 billones de pesos</b>
+    </div>
+    <div class="ImagenSantander">
+        <img src="images/Untitled Project (22).jpg" width="350px" alt="">
+    </dic>
+    </div>
+    <div class="EconomiaSantander">
+        <h2>ECONOMIA</h2>
+    </div>
+    <div class="Caracteristica5">  
+        <b>
+        <ul>
+            <li>Turismo: Una de las regiones mas visitadas en toda Colombia debido a su diversidad de paisajes, arquitectura historica, multiples actividades y deliciosa comida. 
+
+            </li>
+            <li>Comercio: Hay una gran cantidad de oferta y demanda en la region, junto con el auge del turismo el comercio se potencia en sobre manera
+
+            </li>
+            <li>Agricultura: En esta region se cultiva en su mayoria caña de azucar y yuca, debido al clima de la zona, estos alimentos son rentables </li>
+        </ul>
+        </b>
+    </div>
+    <img src="images/Untitled Project (27).jpg" width="700" alt="">
+
+    <div class="VOLVER">
+    <a href="index.html"><h2>VOLVER</h2></a>
+    </div>
+
 </body>
 </html>
