--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>DE LOS MEJORES 5 DEPARTAMENTOS DE COLOMBIA</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body background="images/image.jpg">
+<body background="images/file (8).jpg">
     
     <div class="Todo2">
     <div class="Titulo">
@@ -18,11 +18,11 @@
     <div class="colombia">
     <img src="images/ColombiaMapa.jpg"width="764" height="791" usemap="#Mapa">
     <map name="Mapa">
-        <area shape="poly" coords="253, 300, 244, 287, 233, 269, 240, 254 268, 254, 274, 271, 264, 284" href="Antioquia.html" target="_blank" alt="EnlaceAntioquia">
-        <area shape="poly" coords="316, 221, 305, 212, 294, 193, 301, 178, 325, 178, 336, 193, 325, 212" href="Bolivar.html" target="_blank" alt="EnlaceBolivar">
-        <area shape="poly" coords="381, 348, 371, 355, 360, 317, 368, 304, 392, 304, 401, 319, 390, 333" href="Boyaca.html" target="_blank" alt="EnlaceBoyaca">
-        <area shape="poly" coords="253, 359, 242, 345, 233, 324, 242, 315, 264, 313, 274, 328, 262, 345" href="Caldas.html" target="_blank" alt="EnlaceCaldas">
-        <area shape="poly" coords="362, 298, 353, 284, 340, 265, 351, 252, 375, 252, 382, 265, 371, 285" href="Santander.html" target="_blank" alt="EnlaceSantander">
+        <area shape="poly" coords="253, 300, 244, 287, 233, 269, 240, 254 268, 254, 274, 271, 264, 284" href="Antioquia.html" target="" alt="EnlaceAntioquia">
+        <area shape="poly" coords="316, 221, 305, 212, 294, 193, 301, 178, 325, 178, 336, 193, 325, 212" href="Bolivar.html" target="" alt="EnlaceBolivar">
+        <area shape="poly" coords="381, 348, 371, 355, 360, 317, 368, 304, 392, 304, 401, 319, 390, 333" href="Boyaca.html" target="" alt="EnlaceBoyaca">
+        <area shape="poly" coords="253, 359, 242, 345, 233, 324, 242, 315, 264, 313, 274, 328, 262, 345" href="Caldas.html" target="" alt="EnlaceCaldas">
+        <area shape="poly" coords="362, 298, 353, 284, 340, 265, 351, 252, 375, 252, 382, 265, 371, 285" href="Santander.html" target="" alt="EnlaceSantander">
     </map>
     </div>
    
