--- a/Boyaca.html
+++ b/Boyaca.html
@@ -6,7 +6,7 @@
     <title>Boyaca</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body background="/images/Boyaca.jpg">
+<body background="/images/FondoBoyaca.jpeg">
     <div class="Todo2">
     <div class="TituloBoyaca">
     <h1> BOYACA </h1>
@@ -34,11 +34,10 @@
         </ul>
         </b>
     </div>
-    <img src="images/Untitled Project (17).jpg" width="700" alt="">
+    <img src="images/Untitled Project (32).jpg" width="700" alt="">
 
     <div class="VOLVER">
     <a href="index.html"><h2>VOLVER</h2></a>
     </div>
-    <h1>BOYACA</h1>
 </body>
 </html>
