--- a/Bolivar.html
+++ b/Bolivar.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body background="/images/pixelcut-export.jpeg">
+    <!-- Con el div creo clases para dividir los textos -->
     <div class="Todo2">
     <div class="TituloBolivar">
     <h1> BOLIVAR </h1>
@@ -15,6 +16,7 @@
     <b>La capital de este departamento es una de las ciudades mas visitadas de toda colombia, CARTAGENA es un destino turistico visistado por sus arquitecturas patrimoniales y sus festivales que incluyen temas como la literatura, el arte y la gastronomía</b>
     </div>
     <div class="ImagenBolivar">
+        <!-- img para introducir imagenes, el "width" es el tamaño de la imagen y esta en px -->
         <img src="images/Untitled Project (3).jpg" width="350px" alt="">
     </dic>
     </div>
@@ -23,6 +25,7 @@
     </div>
     <div class="Caracteristica1">  
         <b>
+        <!-- Ahora creo listas desordenadas con el <ul> y las inicialiso con <li> -->
         <ul>
             <li>Turismo: Uno de los principales fuertes en la economia del departamento de Bolivar se basa en el turismo primsipalmente gracias a los aproximados 228.000 turistas anuales que visitan Cartagena
 
@@ -35,7 +38,7 @@
         </b>
     </div>
     <img src="images/Untitled Project (10).jpg" width="700" alt="">
-
+    <!-- Esto es para que cuando el usuario le de click, regrese al archivo principal -->
     <div class="VOLVER">
     <a href="index.html"><h2>VOLVER</h2></a>
     </div>
