--- a/Boyaca.html
+++ b/Boyaca.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body background="/images/FondoBoyaca.jpeg">
+    <!-- Con el div creo clases para dividir los textos -->
     <div class="Todo2">
     <div class="TituloBoyaca">
     <h1> BOYACA </h1>
@@ -15,6 +16,7 @@
     <b>Un departamento que es testigo de la historia de Colombia, el 7 de agosto se libro una de las batallas mas importantes de Colombia precisamente en BOYACA</b>
     </div>
     <div class="ImagenBoyaca">
+        <!-- img para introducir imagenes, el width es el tamaño de la imagen y esta en px -->
         <img src="images/Untitled Project (16).jpg" width="350px" alt="">
     </dic>
     </div>
@@ -23,6 +25,7 @@
     </div>
     <div class="Caracteristica3">  
         <b>
+            <!-- Ahora creo listas desordenadas con el <ul> y las inicialiso con <li> -->
         <ul>
             <li>Agricultura: En Boyaca cultivos como la papa, cereales como el maiz, trigo y cebada. Se dan muy bien en esta tierra debido al clima  
 
@@ -35,7 +38,7 @@
         </b>
     </div>
     <img src="images/Untitled Project (32).jpg" width="700" alt="">
-
+    <!-- Esto es para que cuando el usuario le de click, regrese al archivo principal -->
     <div class="VOLVER">
     <a href="index.html"><h2>VOLVER</h2></a>
     </div>
