--- a/Santander.html
+++ b/Santander.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body background="/images/FondoSanta.jpeg">
+    <!-- Con el div creo clases para dividir los textos -->
     <div class="Todo2">
     <div class="TituloSantander">
     <h1>SANTANDER</h1>
@@ -15,6 +16,7 @@
     <b>Una tierra montañosa, habitantes con una personalidad arrasadora, comida tipica y es la cuarta economia mas importante de Colombia con un Producto Interno Bruto cercano a los 67,9 billones de pesos</b>
     </div>
     <div class="ImagenSantander">
+        <!-- img para introducir imagenes, el width es el tamaño de la imagen y esta en px -->
         <img src="images/Untitled Project (22).jpg" width="350px" alt="">
     </dic>
     </div>
@@ -23,6 +25,7 @@
     </div>
     <div class="Caracteristica5">  
         <b>
+            <!-- Ahora creo listas desordenadas con el <ul> y las inicialiso con <li> -->
         <ul>
             <li>Turismo: Una de las regiones mas visitadas en toda Colombia debido a su diversidad de paisajes, arquitectura historica, multiples actividades y deliciosa comida. 
 
@@ -35,7 +38,7 @@
         </b>
     </div>
     <img src="images/Untitled Project (27).jpg" width="700" alt="">
-
+    <!-- Esto es para que cuando el usuario le de click, regrese al archivo principal -->
     <div class="VOLVER">
     <a href="index.html"><h2>VOLVER</h2></a>
     </div>
