--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
+<!-- Primero ponemos los parametros necesarios para iniciar -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DE LOS MEJORES 5 DEPARTAMENTOS DE COLOMBIA</title>
+    <!-- Esto permitira los cambios que se realizan en css, los aplicara -->
     <link rel="stylesheet" href="css/style.css">
 </head>
+<!-- Iniciamos con el cuerpo y ponemos una imagen de fondo -->
 <body background="images/file (8).jpg">
-    
+    <!-- Ahora creo clases para dividir los textos -->
     <div class="Todo2">
     <div class="Titulo">
         <h1>CONOCE 5 DE LOS DEPARTAMENTOS MAS IMPORTANTES DE COLOMBIA</h1>
@@ -16,6 +19,7 @@
         <b>¿Que departamento te gustaria visitar?</b>
     </div>
     <div class="colombia">
+        <!-- Introdusco otra imagen que usare para moverme a otras paginas webs por medio de los links que estaran dentro de la imagen en una zona determinada que yo determinare -->
     <img src="images/ColombiaMapa.jpg"width="764" height="791" usemap="#Mapa">
     <map name="Mapa">
         <area shape="poly" coords="253, 300, 244, 287, 233, 269, 240, 254 268, 254, 274, 271, 264, 284" href="Antioquia.html" target="" alt="EnlaceAntioquia">
