--- a/Antioquia.html
+++ b/Antioquia.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ANTIOQUIA</title>
-
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body background="/images/FondoAntioquia39.jpg">
+    <!-- Creo clases para dividir los textos -->
     <div class="Todo2">
     <div class="TituloAntioquia">
     <h1> ANTIOQUIA </h1>
@@ -16,6 +16,7 @@
     <b>Uno de los departamentos mas reconocidos principalmente por la popularidad de Medellin y toda su historia, siendo este mismo una de las ciudades mas grandes de Colombia</b>
     </div>
     <div class="ImagenAntioquia">
+        <!-- img para introducir imagenes, el width es el tamaño de la imagen y esta en px -->
         <img src="images/MapaAntioquia2.jpg" width="350px" alt="">
     </dic>
     </div>
@@ -24,6 +25,7 @@
     </div>
     <div class="Caracteristica2">  
         <b>
+            <!-- Ahora creo listas desordenadas con el <ul> y las inicialiso con <li> -->
         <ul>
             <li>Turismo: Antioquia es una ciudad ampliamente visitada principalmente por sus emblemas como lo son; la famosa piedra del Peñol con sus 740 escaoles o la hacienda napoles, la hacienda de el mayor narcotraficante de la historia 
 
@@ -35,8 +37,8 @@
         </ul>
         </b>
     </div>
-    <img src="images/Untitled Project (15).jpg" width="700" alt="">
-
+    <img src="images/Untitled Project (28).jpg" width="700" alt="">
+    <!-- Esto es para que cuando el usuario le de click, regrese al archivo principal -->
     <div class="VOLVER">
     <a href="index.html"><h2>VOLVER</h2></a>
     </div>
