--- a/Caldas.html
+++ b/Caldas.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body background="/images/FondoCaldas.jpeg">
+    <!-- Con e div creo clases para dividir los textos -->
     <div class="Todo2">
     <div class="TituloCaldas">
     <h1>CALDAS</h1>
@@ -15,6 +16,7 @@
     <b> El Eje cafetero ademas de ser conocido por su cafe tambien es reconocido por su belleza natural y su biodiversidad</b>
     </div>
     <div class="ImagenCaldas">
+        <!-- img para introducir imagenes, el width es el tamaño de la imagen y esta en px -->
         <img src="images/MapaCaldas.jpg" width="350px" alt="">
     </dic>
     </div>
@@ -23,6 +25,7 @@
     </div>
     <div class="Caracteristica4">  
         <b>
+            <!-- Ahora creo listas desordenadas con el <ul> y las inicialiso con <li> -->
         <ul>
             <li>Agricultura: Su producto insignea es el cafe, a pesar de eso en esta tiera se puede cultivar otro tipo de alimentos tales como maiz, frijoles, platano y frutas
 
@@ -36,6 +39,7 @@
     </div>
     <img src="images/Untitled Project (21).jpg" width="700" alt="">
 
+    <!-- Esto es para que cuando el usuario le de click, regrese al archivo principal -->
     <div class="VOLVER">
     <a href="index.html"><h2>VOLVER</h2></a>
     </div>
